Fixing issues with a tag wrap

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -612,7 +612,7 @@ button.plus {
 /*My Projects*/
 
 .my-projects {
-    margin: 4rem 60px 0px 60px;  
+    margin: 4rem 60px 100px 60px;  
 }
 
 .project-cont {
@@ -620,6 +620,7 @@ button.plus {
     column-gap: 20px;
     margin-top: 2rem;
 }
+
 
 .first-project {
     display: flex;
@@ -635,13 +636,17 @@ button.plus {
     background-color:var(--grey); 
 }
 
+.first-project a {
+    display: flex;
+    width: 100%;
+}
+
 .first-project img {
     object-fit: contain;
     min-width: 0;
     border-radius: 2rem;
     transition: 250ms;
 }
-
 
 .second-project {
     position: relative;
@@ -662,6 +667,11 @@ button.plus {
     min-width: 0;
     border-radius: 2rem;
     transition: 250ms;
+}
+
+.second-project a {
+    display: flex;
+    width: 100%;
 }
 
 .project-tag {
@@ -1197,11 +1207,12 @@ button.plus {
         transition: 250ms;
     }
 
-    .first-project:hover {
+    .first-project:hover, .second-project:hover {
         box-shadow: 0px 1px 2px 0px rgba(113, 70, 224, 1),
             1px 2px 4px 0px rgba(113, 70, 224, 1),
             2px 4px 8px 0px rgba(113, 70, 224, 1),
             2px 4px 16px 5px rgba(113, 70, 224, 1);
+            transition: 250ms;
     }
 
      .second-project:hover .project-tag {
